--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "motion": "^10.16.2",
     "pinia": "^2.1.6",
     "vue": "^3.3.4"
